--- a/pages/donation.html
+++ b/pages/donation.html
@@ -6,6 +6,10 @@
     <title>Document</title>
   </head>
   <body>
-    Islom
+    <main>
+      <section>
+        <h1>Islombek</h1>
+      </section>
+    </main>
   </body>
 </html>
