--- a/pages/whatWeDo.html
+++ b/pages/whatWeDo.html
@@ -3,9 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/base/global.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:ital,wght@0,400;0,700;1,200;1,300;1,500;1,600&family=Orbitron:wght@400;500;600;700&family=Poppins:wght@400;500;600;700&family=Roboto:wght@400;500;700&family=Rubik:wght@400;500;600;700&family=Schoolbell&display=swap" rel="stylesheet">
+
+
     <title>Document</title>
   </head>
   <body>
-    Xusan
+    <section  class="whatwedo">
+      <div class="container">
+        <header>
+          <nav >
+            <!-- akobir akadan olaman -->
+          </nav>
+        </header>
+        <div class="whatwedo__worldwide">
+          <div class="whatwedo__worldwide-text">
+            <h1>We are working worldwide</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.</p>
+
+          </div>
+          <div class="whatwedo__worldwide-img">
+            <img src="../images/whatWeDo/hed-img.png" alt="img-hed">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="environment">
+      <div class="container">
+        <div class="environment__titul">
+          <h1>What we do for the environment</h1>
+        </div>
+      </div>
+
+    </section>
   </body>
 </html>
