--- a/pages/whatWeDo.html
+++ b/pages/whatWeDo.html
@@ -32,7 +32,7 @@
       </div>
     </section>
     <section class="environment">
-      <div class="container">
+      <div class="container  container__environment"  >
         <div class="environment__titul">
           <h1>What we do for the environment</h1>
         </div>
