--- a/pages/whatWeDo.html
+++ b/pages/whatWeDo.html
@@ -25,7 +25,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.</p>
 
           </div>
-          <div class="whatwedo__worldwide-img">
+          <div  class="whatwedo__worldwide-img">
             <img src="../images/whatWeDo/hed-img.png" alt="img-hed">
           </div>
         </div>
@@ -36,8 +36,59 @@
         <div class="environment__titul">
           <h1>What we do for the environment</h1>
         </div>
+        <div class="environment__cart-box">
+          <div class="environment__cart-box__cart">
+            <img src="../images/whatWeDo/Icon1.svg" alt="1">
+            <div class="cart-text">
+              <h4>Build healthy cities</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+            </div>
+          </div>
+          <div class="environment__cart-box__cart">
+            <img src="../images/whatWeDo/Ico2.svg" alt="1">
+            <div class="cart-text">
+              <h4>Protect land and water</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+            </div>
+          </div>
+          <div class="environment__cart-box__cart">
+            <img src="../images/whatWeDo/Icon3.svg" alt="1">
+            <div class="cart-text">
+              <h4>Biodiversity</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+            </div>
+          </div>
+          <div class="environment__cart-box__cart">
+            <img src="../images/whatWeDo/Icon4.svg" alt="1">
+            <div class="cart-text">
+              <h4>Tree plantation</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+            </div>
+          </div>
+          <div class="environment__cart-box__cart">
+            <img src="../images/whatWeDo/Icon5.svg" alt="1">
+            <div class="cart-text">
+              <h4>Water sustainability</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+            </div>
+          </div>
+          <div class="environment__cart-box__cart">
+            <img src="../images/whatWeDo/Icon6.svg" alt="1">
+            <div class="cart-text">
+              <h4>Animal safety</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+            </div>
+          </div>
+        </div>
       </div>
-
+    </section>
+    <section class="sustainable">
+      <div class="container">
+        <div class="sustainable__titule">
+          <span>Projects we have done</span>
+          <h2>We are creating a sustainable society, for everyone.</h2>
+        </div>
+      </div>
     </section>
   </body>
 </html>
