--- a/pages/media.html
+++ b/pages/media.html
@@ -3,9 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/base/global.css">
     <title>Document</title>
   </head>
   <body>
-    Xusan
+    <section class="media">
+      <div class="container">
+        <header>
+
+        </header>
+        <div class="media__everyone">
+          <div class="media__everyone-text">
+            <img src="../images/media/Section title.svg" alt="" srcset="">
+            <h1>Our goal is to make water available for everyone</h1>
+            <p>Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+            <button>Read more</button>
+          </div>
+          <div class="media__everyone-cart">
+           <div class="media__everyone-vizit">
+            <img src="../images/media/rasim-1.png" alt="">
+            <div class="media__everyone-vizit__text">
+              <h4>Don’t destroy greenery and don’t spoil scenery.</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim</p>
+            </div>
+          </div>
+          <div class="media__everyone-vizit">
+            <img src="../images/media/rasim-2.png" alt="">
+            <div class="media__everyone-vizit__text">
+              <h4>Why saving wildlife is extremely important</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim</p>
+            </div>
+          </div>
+          <div class="media__everyone-vizit">
+            <img src="../images/media/rasim-3.png" alt="">
+            <div class="media__everyone-vizit__text">
+              <h4>Caring for the present is caring for the future</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim</p>
+            </div>
+          </div>
+          </div>
+       
+        </div>
+      </div>
+    </section>
   </body>
 </html>
