--- a/pages/whatWeDo.html
+++ b/pages/whatWeDo.html
@@ -21,6 +21,7 @@
         </header>
         <div class="whatwedo__worldwide">
           <div class="whatwedo__worldwide-text">
+            <img src="../images/whatWeDo/logo-linia.svg" alt="">
             <h1>We are working worldwide</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.</p>
 
@@ -83,10 +84,36 @@
       </div>
     </section>
     <section class="sustainable">
-      <div class="container">
+      <div class="container ">
         <div class="sustainable__titule">
           <span>Projects we have done</span>
           <h2>We are creating a sustainable society, for everyone.</h2>
+        </div>
+        <div class="sustainable__boxs-carts">
+          <div class="sustainable__boxs-carts-1">
+           <img src="../images/whatWeDo/fonras1.png" alt="1">
+            <div class="sustainable__boxs-carts-1-text">
+              <h4>Mission 40K: <br> Tree plantation</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit. Suspendisse varius enim in eros.</p>
+              <button>See more</button>
+            </div>
+          </div>
+          <div class="sustainable__boxs-carts-1">
+            <img src="../images/whatWeDo/fonras2.png" alt="1">
+             <div class="sustainable__boxs-carts-1-text">
+               <h4>Mission 40K: <br> Tree plantation</h4>
+               <p>Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit. Suspendisse varius enim in eros.</p>
+               <button>See more</button>
+             </div>
+           </div>
+           <div class="sustainable__boxs-carts-1">
+            <img src="../images/whatWeDo/Image.png" alt="1">
+             <div class="sustainable__boxs-carts-1-text">
+               <h4>Mission 40K: <br> Tree plantation</h4>
+               <p>Lorem ipsum dolor sit amet, consectetur adipiscing <br> elit. Suspendisse varius enim in eros.</p>
+               <button>See more</button>
+             </div>
+           </div>
         </div>
       </div>
     </section>
