--- a/pages/whatWeDo.html
+++ b/pages/whatWeDo.html
@@ -14,10 +14,32 @@
   <body>
     <section  class="whatwedo">
       <div class="container">
-        <header>
-          <nav >
-            <!-- akobir akadan olaman -->
-          </nav>
+        <header data-aos="fade-up" class="header">
+          <div class="container header__container">
+            <div class="header__logo">
+              <img src="images/homePage/logo.svg" alt="" />
+            </div>
+            <div class="header__nav">
+              <ul class="nav__list">
+                <li class="list__item">
+                  <a href="#" class="item__link">Home</a>
+                </li>
+                <li class="list__item">
+                  <a href="#" class="item__link">About us</a>
+                </li>
+                <li class="list__item">
+                  <a href="#" class="item__link">What We Do</a>
+                </li>
+                <li class="list__item">
+                  <a href="#" class="item__link">Media</a>
+                </li>
+                <li class="list__item">
+                  <a href="#" class="item__link">Contact</a>
+                </li>
+              </ul>
+              <button class="nav__btn">Donate</button>
+            </div>
+          </div>
         </header>
         <div class="whatwedo__worldwide">
           <div class="whatwedo__worldwide-text">
@@ -117,5 +139,40 @@
         </div>
       </div>
     </section>
+    <footer data-aos="fade-up">
+      <div class="container">
+        <div class="footer__text">
+          <img class="footer__logo" src="" alt="" />
+          <ul class="footer__list">
+            <li class="fotoer__item">Our team</li>
+            <li class="fotoer__item">About us</li>
+            <li class="fotoer__item">Team</li>
+            <li class="fotoer__item">What we do</li>
+            <li class="fotoer__item">Contact</li>
+          </ul>
+          <ul class="footer__list">
+            <li class="fotoer__item">More</li>
+            <li class="fotoer__item">Projects</li>
+            <li class="fotoer__item">Events</li>
+            <li class="fotoer__item">Donate</li>
+            <li class="fotoer__item">Blog</li>
+          </ul>
+          <ul class="footer__list">
+            <li class="fotoer__item">Connect</li>
+            <li class="fotoer__item">Facebook</li>
+            <li class="fotoer__item">Instagram</li>
+            <li class="fotoer__item">Twitter</li>
+            <li class="fotoer__item">Linkdin</li>
+          </ul>
+        </div>
+        <div class="footer__subscribe">
+          <h1>Subscribe to get latest updates</h1>
+          <form action="#">
+            <input type="text" name="" id="" />
+            <button type="submit">Subscribe</button>
+          </form>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
