--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <header data-aos="fade-up" class="header">
         <div class="container header__container">
           <div class="burger">
-            <img src="" alt="">
+            <img src="" alt="" />
           </div>
           <div class="header__logo">
             <img src="images/homePage/logo.svg" alt="" />
