--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <div class="wrapper">
       <!-- Team -->
       <!-- Home page -->
-
       <header data-aos="fade-up" class="header">
         <div class="container header__container">
           <div class="burger">
@@ -24,19 +23,19 @@
           <div class="header__nav">
             <ul class="nav__list">
               <li class="list__item">
-                <a href="#" class="item__link">Home</a>
+                <a href="" class="item__link">Home</a>
               </li>
               <li class="list__item">
-                <a href="#" class="item__link">About us</a>
+                <a href="pages/aboutUs.html" class="item__link">About us</a>
               </li>
               <li class="list__item">
-                <a href="#" class="item__link">What We Do</a>
+                <a href="pages/whatWeDo.html" class="item__link">What We Do</a>
               </li>
               <li class="list__item">
-                <a href="#" class="item__link">Media</a>
+                <a href="pages/media.html" class="item__link">Media</a>
               </li>
               <li class="list__item">
-                <a href="#" class="item__link">Contact</a>
+                <a href="pages/contactUs.html" class="item__link">Contact</a>
               </li>
             </ul>
             <button class="nav__btn">Donate</button>
